[gd_scene load_steps=13 format=3 uid="uid://dtn5wbil33kkl"]

[ext_resource type="Script" path="res://UI/Navigation/nav_button.gd" id="1_qplq3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_umg7a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qc5c8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ajo6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1pmnu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2rm4n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2lxmq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_etpdg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uj1ut"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6rrfm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0lls6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2hawd"]

[node name="NavButton" type="Button"]
offset_right = 76.0
offset_bottom = 599.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_styles/focus = SubResource("StyleBoxEmpty_umg7a")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qc5c8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6ajo6")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1pmnu")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_2rm4n")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_2lxmq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_etpdg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_uj1ut")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6rrfm")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_0lls6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_2hawd")
script = ExtResource("1_qplq3")
scene_name = "res://Scenes/testScene.tscn"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
